--- a/scss/_estructura.scss
+++ b/scss/_estructura.scss
@@ -16,3 +16,6 @@ $caja_footer:100%;
 .encabezado__letra--padding{
     padding-top: $espaciado*2;
 }
+.encabezado__colores--letra{
+    color: black;
+}
