--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -19,6 +19,7 @@ $titulos:(titulo:#55acee, subtitulo:#c25E30 );
 
 .ini {
     width: $caja_ini*0.7; 
+    margin-top: $espaciado;
 }
   .ini__caja--fondo{
     background-color: black;
@@ -29,7 +30,7 @@ $titulos:(titulo:#55acee, subtitulo:#c25E30 );
   }
   .ini__caja--texto{
     color: white;
-    font-style: italic;
+    font-style: normal;
   }
 /*NAVEGADOR*/
  .navegador{
