cambie la cantidad de cartas en todas las secciones, tamaños del menu y centré varias cosas

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7968,6 +7968,7 @@ textarea.form-control-lg {
   font-style: italic; }
 
 .descripcion {
+  color: white;
   height: 4rem;
   display: flex;
   flex-direction: column;
@@ -7985,7 +7986,7 @@ textarea.form-control-lg {
 
 .ordenTarjetas {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   grid-template-rows: 1fr;
   margin: 2rem 0;
   gap: 1rem;
@@ -8026,6 +8027,7 @@ textarea.form-control-lg {
 
 /*novedades*/
 .descripcionNov {
+  color: white;
   height: 4rem;
   display: flex;
   flex-direction: column;
@@ -8059,6 +8061,7 @@ textarea.form-control-lg {
 
 /*HARDWARE*/
 .descripcionHar {
+  color: white;
   height: 4rem;
   display: flex;
   flex-direction: column;
@@ -8108,12 +8111,12 @@ textarea.form-control-lg {
   height: 3rem; }
 
 /*TABLET RESPONSIVE*/
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 1000px) {
   nav ul, footer {
     flex-direction: column;
     align-items: center; }
   .ordenTarjetas {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 1fr; }
   .producto {
     width: 100%; }
