--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -129,11 +129,11 @@ $titulos:(titulo:#55acee, subtitulo:#c25E30 );
     width: $caja_footer/3;
     border:1px solid black;
     background-size: cover;
-    color: black;
+    color: white;
     background-size: cover;
     text-decoration: none;
     text-align: center;
-    background-image: linear-gradient(to top, white, blue);
+    background:darkblue;
     padding: 1vh;
 
 }
