--- a/scss/_estructura.scss
+++ b/scss/_estructura.scss
@@ -12,10 +12,24 @@ $caja_footer:100%;
     color: white;
     background-color: darkblue;
     border: 2px solid black;
+
 }
 .encabezado__letra--padding{
-    padding-top: $espaciado*2;
+    padding-top: $espaciado*0;
+   
 }
 .encabezado__colores--letra{
     color: black;
+}
+.padding-Izq{
+ padding-left: $espaciado*4;
+ padding-top: $espaciado*4;
+}
+
+.margin-Top{
+    margin-top: $espaciado*10;
+    margin-bottom: $espaciado*10;
+}
+.margin-Icon{
+    margin-bottom: $espaciado*5;
 }
