Mejore la pagina de nosotros y luego elimine la pagina de crear user

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -26,6 +26,11 @@
 .margin-Icon {
   margin-bottom: 25px; }
 
+.nosotros-Link {
+  text-align: center;
+  text-decoration: none;
+  color: black; }
+
 .color-titulo {
   background-color: #55acee; }
 
