--- a/scss/_estructura.scss
+++ b/scss/_estructura.scss
@@ -33,3 +33,8 @@ $caja_footer:100%;
 .margin-Icon{
     margin-bottom: $espaciado*5;
 }
+.nosotros-Link{
+    text-align: center;
+    text-decoration: none;
+    color: black;
+}
