--- a/scss/_estructura.scss
+++ b/scss/_estructura.scss
@@ -33,6 +33,9 @@ $caja_footer:100%;
 .margin-Icon{
     margin-bottom: $espaciado*5;
 }
+.margin-Logo{
+    margin-bottom: $espaciado*2.5;
+}
 .nosotros-Link{
     text-align: center;
     text-decoration: none;
