--- a/css/estilos.css
+++ b/css/estilos.css
@@ -36,6 +36,9 @@
   text-decoration: none;
   color: black; }
 
+.ps5-Margin-Img {
+  margin-bottom: 12.5px; }
+
 .color-titulo {
   background-color: #55acee; }
 
